--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 									<!-- Logo -->
 										<div id="logo">
 											<h1><a href="#">David Park</a></h1>
-											<span class="byline">This site is the shit</span>
+											<span class="byline">awwwwwww shit</span>
 										</div>
 									<!-- /Logo -->
 									
@@ -46,25 +46,25 @@
 											<ul>
 												<li class="current_page_item"><a href="index.html">Home</a></li>
 												<li>
-													<span>Secondaries</span>
+													<span>Music</span>
 													<ul>
-														<li><a href="#">Marth</a></li>
-														<li><a href="#">Jigglypuff</a></li>
-														<li><a href="#">Shiek</a></li>
+														<li><a href="#">Tech</a></li>
+														<li><a href="#">Deep</a></li>
+														<li><a href="#">Tech Deep</a></li>
 														<li>
-															<span>Are you gay</span>
+															<span>MORE LINX NOW</span>
 															<ul>
-																<li><a href="#">Dr. Mario</a></li>
-																<li><a href="#">Samus</a></li>
-																<li><a href="#">Peach</a></li>
-																<li><a href="#">Ice Climbers</a></li>
+																<li><a href="#">1</a></li>
+																<li><a href="#">2</a></li>
+																<li><a href="#">3</a></li>
+																<li><a href="#">4</a></li>
 															</ul>
 														</li>
 													</ul>
 												</li>
-												<li><a href="right-sidebar.html">Fox</a></li>
-												<li><a href="left-sidebar.html">Falco</a></li>
-												<li><a href="no-sidebar.html">Captain Falcon</a></li>
+												<li><a href="right-sidebar.html">1</a></li>
+												<li><a href="left-sidebar.html">2</a></li>
+												<li><a href="no-sidebar.html">3</a></li>
 											</ul>
 										</nav>
 									<!-- /Nav -->
@@ -92,7 +92,7 @@
 										
 										 <a href="http://www.sirlin.net/ptw/" class="nobr" style="color:#FF99FF">Sirlin</a>
 									</p>
-									<p class="style3">I like these articles. Because <strong>reasons</strong>.
+									<p class="style3">I like these articles. Because <strong>hmmm</strong>.
 									<!--
 									<p class="style3">Mauris tellus lacus, tincidunt eget mattis at, laoreet vel velit. 
 									Aliquam diam ante, aliquet sit amet vulputate lorem at placerat at nisl. 
@@ -206,31 +206,31 @@
 										<div class="row">
 											<div class="4u">
 												<section class="highlight highlight-one">
-													<a href="http://fav.me/d59i3b3" class="image image-full"><img src="images/pic02.jpg" alt="" /></a>
+													<a href="http://fav.me/d59i3b3" class="image image-full"><img src="images/fox.png" alt="" /></a>
 													<h3><a href="#">Fox</a></h3>
-													<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+													<p>So fast</p>
 													<ul class="actions">
-														<li><a href="#" class="button button-style1">Learn More</a></li>
+														<li><a href="#" class="button button-style1">Prepare</a></li>
 													</ul>
 												</section>
 											</div>
 											<div class="4u">
 												<section class="highlight highlight-two">
-													<a href="http://fav.me/d4tqyby" class="image image-full"><img src="images/pic03.jpg" alt="" /></a>
+													<a href="http://fav.me/d4tqyby" class="image image-full"><img src="images/falco.png" alt="" /></a>
 													<h3><a href="#">Falco</a></h3>
-													<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+													<p>So gay</p>
 													<ul class="actions">
-														<li><a href="#" class="button button-style1">Learn More</a></li>
+														<li><a href="#" class="button button-style1">To</a></li>
 													</ul>
 												</section>
 											</div>
 											<div class="4u">
 												<section class="highlight highlight-three">
-													<a href="http://fav.me/d5w2dot" class="image image-full"><img src="images/pic04.jpg" alt="" /></a>
+													<a href="http://fav.me/d5w2dot" class="image image-full"><img src="images/cf.png" alt="" /></a>
 													<h3><a href="#">Captain Falcon</a></h3>
-													<p>Eget mattis at, laoreet vel amet sed velit aliquam diam ante, dolor aliquet sit amet vulputate mattis amet laoreet lorem.</p>
+													<p>So manly</p>
 													<ul class="actions">
-														<li><a href="#" class="button button-style1">Learn More</a></li>
+														<li><a href="#" class="button button-style1">Die</a></li>
 													</ul>
 												</section>
 											</div>
@@ -247,7 +247,7 @@
 
 		<!-- Footer Wrapper -->
 			<div id="footer-wrapper" class="wrapper">
-				<div class="title">The Rest Of It</div>
+				<div class="title">Recent Headlines</div>
 				<div class="container">
 					<div class="row">
 						<div class="12u">
@@ -255,10 +255,10 @@
 							<!-- Footer -->
 								<div id="footer">
 									<header class="style1">
-										<h2>Ipsum sapien elementum portitor?</h2>
+										<h2>Detroit Swindle are my niggas</h2>
 										<p class="byline">
-											Sed turpis tortor, tincidunt sed ornare in metus porttitor mollis nunc in aliquet.<br />
-											Nam pharetra laoreet imperdiet volutpat etiam consequat feugiat.
+											That Art Department is so hot right now.<br />
+											Amine Edge & DANCE hot hot.
 										</p>
 									</header>
 									<hr />
@@ -308,9 +308,9 @@
 																		<section>
 																			<h3 class="fa fa-home">Mailing Address</h3>
 																			<p>
-																				Untitled Corporation<br />
-																				1234 Somewhere Rd #987<br />
-																				Nashville, TN 00000-0000
+																				1503 N. 17th St<br />
+																				APT 3<br />
+																				Philadelphia, PA 19121
 																			</p>
 																		</section>
 																	</div>
@@ -318,9 +318,9 @@
 																		<section>
 																			<h3 class="fa fa-comment">Social</h3>
 																			<p>
-																				<a href="http://twitter.com/n33co">@n33co</a><br />
-																				<a href="http://dribbble.com/n33">dribbble.com/n33</a><br />
-																				<a href="#">facebook.com/untitled</a>
+																				<a href="http://twitter.com/dhplol">@dhplol</a><br />
+																				<a href="http://rinse.fm/player/">rinseFM</a><br />
+																				<a href="#">TO THA TOP</a>
 																			</p>
 																		</section>
 																	</div>
@@ -330,7 +330,7 @@
 																		<section>
 																			<h3 class="fa fa-envelope">Email</h3>
 																			<p>
-																				<a href="#">info@untitled.tld</a>
+																				<a href="#">private fuck you</a>
 																			</p>
 																		</section>
 																	</div>
@@ -338,7 +338,7 @@
 																		<section>
 																			<h3 class="fa fa-phone">Phone</h3>
 																			<p>
-																				(000) 555-0000
+																				(484) 222-0822
 																			</p>
 																		</section>
 																	</div>
@@ -358,7 +358,7 @@
 							<!-- Copyright -->
 								<div id="copyright">
 									<span>
-										&copy; Untitled. Design by <a href="http://html5up.net/">HTML5 UP</a>.
+										lol
 									</span>
 								</div>
 							<!-- /Copyright -->
