--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		
 		<!-- Intro Wrapper -->
 			<div id="intro-wrapper" class="wrapper wrapper-style1">
-				<div class="title">Some Inspiration</div>
+				<div class="title">Some Inspiration?</div>
 				<div class="container">
 					<div class="row">
 						<div class="12u">
@@ -206,7 +206,7 @@
 										<div class="row">
 											<div class="4u">
 												<section class="highlight highlight-one">
-													<a href="http://fav.me/d59i3b3" class="image image-full"><img src="images/fox.png" alt="" /></a>
+													<a href="https://www.google.com/" class="image image-full"><img src="images/fox.png" alt="" /></a>
 													<h3><a href="#">Fox</a></h3>
 													<p>So fast</p>
 													<ul class="actions">
@@ -216,7 +216,7 @@
 											</div>
 											<div class="4u">
 												<section class="highlight highlight-two">
-													<a href="http://fav.me/d4tqyby" class="image image-full"><img src="images/falco.png" alt="" /></a>
+													<a href="https://www.google.com/" class="image image-full"><img src="images/falco.png" alt="" /></a>
 													<h3><a href="#">Falco</a></h3>
 													<p>So gay</p>
 													<ul class="actions">
@@ -226,7 +226,7 @@
 											</div>
 											<div class="4u">
 												<section class="highlight highlight-three">
-													<a href="http://fav.me/d5w2dot" class="image image-full"><img src="images/cf.png" alt="" /></a>
+													<a href="https://www.google.com/" class="image image-full"><img src="images/cf.png" alt="" /></a>
 													<h3><a href="#">Captain Falcon</a></h3>
 													<p>So manly</p>
 													<ul class="actions">
