added pen rank, commit practice

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 											<ul>
 												<li class="current_page_item"><a href="index.html">Home</a></li>
 												<li>
-													<span>Music</span>
+													<span>DROPDOWN</span>
 													<ul>
 														<li><a href="#">Tech</a></li>
 														<li><a href="#">Deep</a></li>
@@ -54,7 +54,7 @@
 														<li>
 															<span>MORE LINX NOW</span>
 															<ul>
-																<li><a href="#">1</a></li>
+																<li><a href="#">GOD MUSIC</a></li>
 																<li><a href="#">2</a></li>
 																<li><a href="#">3</a></li>
 																<li><a href="#">4</a></li>
@@ -62,7 +62,7 @@
 														</li>
 													</ul>
 												</li>
-												<li><a href="right-sidebar.html">1</a></li>
+												<li><a href="right-sidebar.html">LINK 1</a></li>
 												<li><a href="left-sidebar.html">2</a></li>
 												<li><a href="no-sidebar.html">3</a></li>
 											</ul>
@@ -80,19 +80,18 @@
 		
 		<!-- Intro Wrapper -->
 			<div id="intro-wrapper" class="wrapper wrapper-style1">
-				<div class="title">Some Inspiration?</div>
+				<div class="title">SUP</div>
 				<div class="container">
 					<div class="row">
 						<div class="12u">
 							
 							<!-- Intro -->
 								<section id="intro">
-									<p class="style1"><a href="http://raymmar.com/7-reasons-youll-never-do-anything-amazing-life/"> Raymar </a></p>
+									<p class="style1"><a href="http://raymmar.com/7-reasons-youll-never-do-anything-amazing-life/">Motivational Article</a></p>
 									<p class="style2">
 										
-										 <a href="http://www.sirlin.net/ptw/" class="nobr" style="color:#FF99FF">Sirlin</a>
+										 <a href="http://www.sirlin.net/ptw/" class="nobr" style="color:#FF99FF">Game Theory Article</a>
 									</p>
-									<p class="style3">I like these articles. Because <strong>hmmm</strong>.
 									<!--
 									<p class="style3">Mauris tellus lacus, tincidunt eget mattis at, laoreet vel velit. 
 									Aliquam diam ante, aliquet sit amet vulputate lorem at placerat at nisl. 
@@ -122,56 +121,59 @@
 									<!-- Features -->
 										<section id="features">
 											<header class="style1">
-												<h2>Best Food at Temple</h2>
-												<p class="byline">Trucks, Restaurants, Stores</p>
+												<h2>Favorite Things</h2>
+												<p class="byline">lol</p>
 											</header>
 											<div class="feature-list">
 												<div>
 													<div class="row">
-														<div class="6u">
+														<div>
 															<section>
-																<h3 class="fa fa-comment">High Tier</h3>
-																<p>Fogo De ChaOOOOOOOOOOOOOOOOOOOOOOOOOO.</p>
+																<h3 class="fa fa-pencil">Pen Rank</h3>
+																<p>1. Pilot G-Tec-C4 (0.4mm)</p>
+																<p>2. Pilot Precise V5 (0.5mm)</p>
+																<p>3. every other pen IS SHIT</p>
+																<p>4. anything >0.5mm IS SHIT</p>
 															</section>
 														</div>
-														<div class="6u">
+														<div>
 															<section>
-																<h3 class="fa fa-refresh">Mid-High Tier</h3>
-																<p> Gyro. CurrRRRRRRRRRRRRRRRRRRRRRRRRRRy.</p>
-																<p>Pork BBQ. Teriyaki.</p>
-																<p>Banh Mi.</p>
-															</section>
-														</div>
-													</div>
-													<div class="row">
-														<div class="6u">
-															<section>
-																<h3 class="fa fa-picture-o">Mid Tier</h3>
-																<p>Koja Beef/Pork. Master Wok.</p>
-																<p>Cuban Panini. Tepanyaki.</p>
-																<p>Pork Platter. Hue Sushi.</p>
-																<p>KWings Tepanyaki. KFC.</p>
-															</section>
-														</div>
-														<div class="6u">
-															<section>
-																<h3 class="fa fa-cog">Mid-Low Tier</h3>
-																<p>Koja Wings. Pazzo Pazzo.</p>
-																<p>Subway.</p>
+																<h3 class="fa fa-refresh">?? Rank?</h3>
+																<p></p>
+																<p> </p>
 															</section>
 														</div>
 													</div>
 													<div class="row">
 														<div class="6u">
 															<section>
-																<h3 class="fa fa-wrench">Low</h3>
-																<p>Jimmy Johns. Burger Busz.</p>
+																<h3 class="fa fa-picture-o">Food: On Campus</h3>
+																<p>1. Curry, PorkBBQ, Pork Banh Mi, Tepanyaki</p>
+																<p>2. Gyro, Master Wok, .</p>
+																<p>3. [Viet]Pork Platter, </p>
+																<p>4. [Tepanyaki]KWings</p>
 															</section>
 														</div>
 														<div class="6u">
 															<section>
-																<h3 class="fa fa-check">Shit Tier</h3>
-																<p>Everything else.</p>
+																<h3 class="fa fa-cog">Food:Off Campus</h3>
+																<p>1. [Koja]Wings</p>
+																<p>2. Subway, [Noshery]Cuban Panini, [Hue]Teriyaki, [Koja]Beef/Pork Bulgogi</p>
+																<p>3. [Hue]Sushi. KFC</p>
+															</section>
+														</div>
+													</div>
+													<div class="row">
+														<div class="6u">
+															<section>
+																<h3 class="fa fa-wrench">lkajdioajwidjali</h3>
+																<p>ollolololololo.</p>
+															</section>
+														</div>
+														<div class="6u">
+															<section>
+																<h3 class="fa fa-check">klaljsaasaladslk</h3>
+																<p>WWWWWWWWWWWA</p>
 															</section>
 														</div>
 													</div>
@@ -206,31 +208,31 @@
 										<div class="row">
 											<div class="4u">
 												<section class="highlight highlight-one">
-													<a href="https://www.google.com/" class="image image-full"><img src="images/fox.png" alt="" /></a>
-													<h3><a href="#">Fox</a></h3>
-													<p>So fast</p>
+													<a href="http://smashboards.com/forums/falco.111/" class="image image-full"><img src="images/falco.png" alt="" /></a>
+													<h3><a href="#">Falco</a></h3>
+													<p>Vs Fox, Marth, Shiek</p>
 													<ul class="actions">
-														<li><a href="#" class="button button-style1">Prepare</a></li>
+														<li><a href="#" class="button button-style1">BTN 1</a></li>
 													</ul>
 												</section>
 											</div>
 											<div class="4u">
 												<section class="highlight highlight-two">
-													<a href="https://www.google.com/" class="image image-full"><img src="images/falco.png" alt="" /></a>
-													<h3><a href="#">Falco</a></h3>
-													<p>So gay</p>
+													<a href="http://smashboards.com/forums/fox.68/" class="image image-full"><img src="images/fox.png" alt="" /></a>
+													<h3><a href="#">Fox</a></h3>
+													<p>Vs Falco, Peach, Jiggs, CF</p>
 													<ul class="actions">
-														<li><a href="#" class="button button-style1">To</a></li>
+														<li><a href="#" class="button button-style1">BTN 2</a></li>
 													</ul>
 												</section>
 											</div>
 											<div class="4u">
 												<section class="highlight highlight-three">
-													<a href="https://www.google.com/" class="image image-full"><img src="images/cf.png" alt="" /></a>
+													<a href="http://smashboards.com/forums/captain-falcon.66/" class="image image-full"><img src="images/cf.png" alt="" /></a>
 													<h3><a href="#">Captain Falcon</a></h3>
-													<p>So manly</p>
+													<p>Vs noobs</p>
 													<ul class="actions">
-														<li><a href="#" class="button button-style1">Die</a></li>
+														<li><a href="#" class="button button-style1">BTN 3</a></li>
 													</ul>
 												</section>
 											</div>
@@ -255,10 +257,9 @@
 							<!-- Footer -->
 								<div id="footer">
 									<header class="style1">
-										<h2>Detroit Swindle are my niggas</h2>
+										<h2>Detroit Swindle DOE</h2>
 										<p class="byline">
-											That Art Department is so hot right now.<br />
-											Amine Edge & DANCE hot hot.
+											TESSSSSST<br />
 										</p>
 									</header>
 									<hr />
