--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -36,8 +36,8 @@
 									
 									<!-- Logo -->
 										<div id="logo">
-											<h1><a href="#">Escape Velocity</a></h1>
-											<span class="byline">A free responsive site template by HTML5 UP</span>
+											<h1><a href="#">o lawd</a></h1>
+											<span class="byline">what have we here</span>
 										</div>
 									<!-- /Logo -->
 									
