done first page gonna do 2nd/music page

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 														<li>
 															<span>MORE LINX NOW</span>
 															<ul>
-																<li><a href="#">GOD MUSIC</a></li>
+																<li><a href="#">1</a></li>
 																<li><a href="#">2</a></li>
 																<li><a href="#">3</a></li>
 																<li><a href="#">4</a></li>
@@ -62,7 +62,7 @@
 														</li>
 													</ul>
 												</li>
-												<li><a href="right-sidebar.html">LINK 1</a></li>
+												<li><a href="right-sidebar.html">God Music</a></li>
 												<li><a href="left-sidebar.html">2</a></li>
 												<li><a href="no-sidebar.html">3</a></li>
 											</ul>
@@ -122,7 +122,6 @@
 										<section id="features">
 											<header class="style1">
 												<h2>Favorite Things</h2>
-												<p class="byline">lol</p>
 											</header>
 											<div class="feature-list">
 												<div>
@@ -138,51 +137,53 @@
 														</div>
 														<div>
 															<section>
-																<h3 class="fa fa-refresh">?? Rank?</h3>
-																<p></p>
-																<p> </p>
+																<h3 class="fa fa-desktop">Fav TV Shows</h3>
+																<p>1. Portlandia, Louie, Trailer Park Boys</p>
+																<p>2. It's Always Sunny in Philadelphia, Eastbound and Down</p>
+																<p>3. Arrested Development</p>
+																<p>4. FUCK BREAKING BAD 0/10</p>
 															</section>
 														</div>
 													</div>
 													<div class="row">
-														<div class="6u">
+														<div>
 															<section>
-																<h3 class="fa fa-picture-o">Food: On Campus</h3>
+																<h3 class="fa fa-dot-circle-o">Food: On Campus</h3>
 																<p>1. Curry, PorkBBQ, Pork Banh Mi, Tepanyaki</p>
-																<p>2. Gyro, Master Wok, .</p>
-																<p>3. [Viet]Pork Platter, </p>
+																<p>2. Gyro, Crepe</p>
+																<p>3. [Viet]Pork Platter, Master Wok, Pho Tai</p>
 																<p>4. [Tepanyaki]KWings</p>
 															</section>
 														</div>
-														<div class="6u">
+														<div>
 															<section>
-																<h3 class="fa fa-cog">Food:Off Campus</h3>
-																<p>1. [Koja]Wings</p>
-																<p>2. Subway, [Noshery]Cuban Panini, [Hue]Teriyaki, [Koja]Beef/Pork Bulgogi</p>
-																<p>3. [Hue]Sushi. KFC</p>
+																<h3 class="fa fa-circle-o">Food:Off Campus</h3>
+																<p>1. [Hue]Teriyaki, [Koja]Beef/Pork Bulgogi</p>
+																<p>2. [Noshery]Cuban Panini, [Hue]Sushi, KFC</p>
+																<p>3. [Koja]KWings, Subway</p>
 															</section>
 														</div>
 													</div>
 													<div class="row">
 														<div class="6u">
 															<section>
-																<h3 class="fa fa-wrench">lkajdioajwidjali</h3>
-																<p>ollolololololo.</p>
+																<h3 class="fa fa-gamepad">Fav LoL champs</h3>
+																<p>1. Kha'Zix</p>
+																<p>2. Annie</p>
+																<p>3. J4</p>
 															</section>
 														</div>
 														<div class="6u">
 															<section>
-																<h3 class="fa fa-check">klaljsaasaladslk</h3>
-																<p>WWWWWWWWWWWA</p>
+																<h3 class="fa fa-check">Fav Games</h3>
+																<p>1. Smash Bros Melee</p>
+																<p>2. League of Legends</p>
+																<p>3. Tetris</p>
 															</section>
 														</div>
 													</div>
 												</div>
 											</div>
-											<ul class="actions actions-centered">
-												<li><a href="#" class="button button-style1 button-big">Red Button</a></li>
-												<li><a href="#" class="button button-style2 button-big">White Button</a></li>
-											</ul>
 										</section>
 									<!-- /Features -->
 									
@@ -208,31 +209,31 @@
 										<div class="row">
 											<div class="4u">
 												<section class="highlight highlight-one">
-													<a href="http://smashboards.com/forums/falco.111/" class="image image-full"><img src="images/falco.png" alt="" /></a>
+													<class="image image-full"><img src="images/falco.png" alt="" /></a>
 													<h3><a href="#">Falco</a></h3>
 													<p>Vs Fox, Marth, Shiek</p>
 													<ul class="actions">
-														<li><a href="#" class="button button-style1">BTN 1</a></li>
+														<li><a href="http://smashboards.com/forums/falco.111/" class="button button-style1">Smashboards Falco</a></li>
 													</ul>
 												</section>
 											</div>
 											<div class="4u">
 												<section class="highlight highlight-two">
-													<a href="http://smashboards.com/forums/fox.68/" class="image image-full"><img src="images/fox.png" alt="" /></a>
+													<class="image image-full"><img src="images/fox.png" alt="" /></a>
 													<h3><a href="#">Fox</a></h3>
 													<p>Vs Falco, Peach, Jiggs, CF</p>
 													<ul class="actions">
-														<li><a href="#" class="button button-style1">BTN 2</a></li>
+														<li><a href="http://smashboards.com/forums/fox.68/" class="button button-style1">Smashboards Fox</a></li>
 													</ul>
 												</section>
 											</div>
 											<div class="4u">
 												<section class="highlight highlight-three">
-													<a href="http://smashboards.com/forums/captain-falcon.66/" class="image image-full"><img src="images/cf.png" alt="" /></a>
+													<class="image image-full"><img src="images/cf.png" alt="" /></a>
 													<h3><a href="#">Captain Falcon</a></h3>
 													<p>Vs noobs</p>
 													<ul class="actions">
-														<li><a href="#" class="button button-style1">BTN 3</a></li>
+														<li><a href="http://smashboards.com/forums/captain-falcon.66/" class="button button-style1">Smashboards CF</a></li>
 													</ul>
 												</section>
 											</div>
@@ -281,7 +282,7 @@
 																</div>
 																<div class="row half">
 																	<div class="12u">
-																		<textarea name="message" id="contact-message" placeholder="Message"></textarea>
+																		<textarea name="message" id="contact-message" placeholder="shit doesn't work"></textarea>
 																	</div>
 																</div>
 																<div class="row">
@@ -321,7 +322,6 @@
 																			<p>
 																				<a href="http://twitter.com/dhplol">@dhplol</a><br />
 																				<a href="http://rinse.fm/player/">rinseFM</a><br />
-																				<a href="#">TO THA TOP</a>
 																			</p>
 																		</section>
 																	</div>
