--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
 													</ul>
 												</li>
 												<li><a href="right-sidebar.html">God Music</a></li>
-												<li><a href="left-sidebar.html">2</a></li>
-												<li><a href="no-sidebar.html">3</a></li>
+												<li><a href="http://162.243.120.22:2368/">GHOST</a></li>
 											</ul>
 										</nav>
 									<!-- /Nav -->
