--- a/right-sidebar.html
+++ b/right-sidebar.html
@@ -36,8 +36,8 @@
 									
 									<!-- Logo -->
 										<div id="logo">
-											<h1><a href="#">o lawd</a></h1>
-											<span class="byline">what have we here</span>
+											<h1><a href="#">MUSIC</a></h1>
+											<span class="byline">o lawd</span>
 										</div>
 									<!-- /Logo -->
 									
@@ -45,25 +45,6 @@
 										<nav id="nav">
 											<ul>
 												<li><a href="index.html">Home</a></li>
-												<li>
-													<span>Dropdown</span>
-													<ul>
-														<li><a href="#">Lorem ipsum</a></li>
-														<li><a href="#">Magna veroeros</a></li>
-														<li><a href="#">Etiam nisl</a></li>
-														<li>
-															<span>Sed consequat</span>
-															<ul>
-																<li><a href="#">Lorem dolor</a></li>
-																<li><a href="#">Amet consequat</a></li>
-																<li><a href="#">Magna phasellus</a></li>
-																<li><a href="#">Etiam nisl</a></li>
-																<li><a href="#">Sed feugiat</a></li>
-															</ul>
-														</li>
-														<li><a href="#">Nisl tempus</a></li>
-													</ul>
-												</li>
 												<li class="current_page_item"><a href="right-sidebar.html">Right Sidebar</a></li>
 												<li><a href="left-sidebar.html">Left Sidebar</a></li>
 												<li><a href="no-sidebar.html">No Sidebar</a></li>
