--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 														</li>
 													</ul>
 												</li>
-												<li><a href="right-sidebar.html">God Music</a></li>
+												<li><a href="Parallelism.html">God Music</a></li>
 												<li><a href="http://162.243.120.22:2368/">GHOST</a></li>
 											</ul>
 										</nav>
